# th-upsert-typesynonym

./: th-upsert-typesynonym.cabal
src/: Main.hs  TH.hs
