name:                th-upsert-typesynonym
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/th-upsert-typesynonym#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
    exposed-modules: TH
    hs-source-dirs:      src
    build-depends:       base >= 4.7 && < 5,
                         template-haskell >= 2.11.0.0

    default-language:    Haskell2010

 

executable th-upsert-typesynonym
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       template-haskell >= 2.11.0.0
